--- a/styles.css
+++ b/styles.css
@@ -191,3 +191,16 @@
   .item .add-button {
     margin-top: 10px;
   }
+
+  footer {
+    background-color: white;
+    text-align: center;
+    padding: 20px;
+  }
+  
+  footer a {
+    font-family: 'Work Sans', sans-serif;
+    color:rgb(34, 34, 34);
+    font-size: large;
+    font-weight: 700;
+  }
