aggiunta del pop up, non funzionano le card

--- a/styles.css
+++ b/styles.css
@@ -204,3 +204,10 @@
     font-size: large;
     font-weight: 700;
   }
+
+  .composizione {
+    font-family: 'Work Sans', sans-serif;
+    color:rgb(34, 34, 34);
+    font-size: large;
+    font-weight: 700;
+  }
