--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,35 +15,25 @@
   body{
       font-family: 'Playfair Display', serif;
       font-family: 'Work Sans', sans-serif;
-      background-image: url("img/limoniwallapaper.jpg");
+      background-image: url("../img/limoniwallapaper.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
       /* position: relative; */
   }
 
-  
-/* body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(65, 65, 65, 0.4);
-    z-index: -1; 
-  } L'avevo fatto per scurire lo sfondo ma non serve*/
-  
+
   
   .container {
     display: flex;
     flex-direction: column;
+    
 
   
   }
 
   .header-container {
-    background-color: #fffffff5;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -138,8 +128,6 @@
 
   .add-button-conserve:hover {
     transform: scale(120%);
-
-
   }
 
 
@@ -195,15 +183,21 @@
   footer {
     background-color: white;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+   
   }
   
-  footer a {
+  footer  a {
     font-family: 'Work Sans', sans-serif;
     color:rgb(34, 34, 34);
     font-size: large;
     font-weight: 700;
-  }
+}
+  
 
   .composizione {
     font-family: 'Work Sans', sans-serif;
